# image-processing-apis

./: .gitignore  CMakeLists.txt  README.md  filters.cpp  filtersAPIS.cpp  filtersAPIS.h  main.cpp
Client/: CMakeLists.txt  main.cpp
Client/src/: Client.cpp  Client.hpp
src/: Server.cpp  Server.hpp
src/controllers/: ImageController.cpp  ImageController.hpp
src/dtos/: ImageDto.cpp  ImageDto.hpp
src/handlers/: ImageHandler.cpp  ImageHandler.hpp
src/utils/: Utils.cpp
test/: CMakeLists.txt  ImageControllerTest.cpp  main.cpp
